--- a/index.html
+++ b/index.html
@@ -15,16 +15,16 @@
             },
             colors: {
               primary: {
-                50: '#f0f9ff',
-                100: '#e0f2fe',
-                500: '#0ea5e9',
-                600: '#0284c7',
-                700: '#0369a1',
-                900: '#0c4a6e',
+                50: '#fef2f2',
+                100: '#fee2e2',
+                500: '#ef4444',
+                600: '#dc2626',
+                700: '#b91c1c',
+                900: '#7f1d1d',
               },
               secondary: {
-                500: '#ef4444', // Red accent from image
-                600: '#dc2626',
+                500: '#64748b', // Slate/Gray for contrast
+                600: '#475569',
               },
               dark: {
                 800: '#1e293b',
