feat: Improve login feedback and add guest role
Refactors the login component to provide more specific feedback to users, distinguishing between incorrect passwords and non-existent users.

Updates the `SystemUser` type to include a 'CONVIDADO' role, alongside 'ADMIN'. This change, along with backend adjustments in `dbService`, prepares the system for granular access control.

Introduces new default system users with the 'CONVIDADO' role for testing and expansion.

Enhances the visual appeal of the login page with background elements and updates UI elements like titles and color schemes to align with a more modern aesthetic.

Includes Babel Standalone for in-browser JavaScript compilation, simplifying frontend development workflow.

Fixes imports for `.tsx` files to use `.ts` extension.

--- a/index.html
+++ b/index.html
@@ -4,9 +4,13 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>K-System Enterprise</title>
+    <title>K-System</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+    
+    <!-- Babel Standalone for in-browser compilation -->
+    <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
+
     <!-- PDF Generation Library -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/html2pdf.js/0.10.1/html2pdf.bundle.min.js"></script>
     <script>
@@ -18,21 +22,30 @@
             },
             colors: {
               primary: {
-                50: '#fef2f2',
-                100: '#fee2e2',
-                500: '#ef4444',
-                600: '#dc2626',
-                700: '#b91c1c',
-                900: '#7f1d1d',
+                50: '#eef2ff',  // Indigo 50
+                100: '#e0e7ff', // Indigo 100
+                200: '#c7d2fe',
+                300: '#a5b4fc',
+                400: '#818cf8',
+                500: '#6366f1', // Indigo 500
+                600: '#4f46e5', // Indigo 600 (Main Action)
+                700: '#4338ca', // Indigo 700
+                800: '#3730a3',
+                900: '#312e81', // Indigo 900
+                950: '#1e1b4b',
               },
               secondary: {
-                500: '#64748b', // Slate/Gray for contrast
-                600: '#475569',
+                500: '#64748b', // Slate 500
+                600: '#475569', // Slate 600
               },
               dark: {
                 800: '#1e293b',
                 900: '#0f172a',
               }
+            },
+            boxShadow: {
+              'soft': '0 4px 20px -2px rgba(0, 0, 0, 0.05)',
+              'glow': '0 4px 20px 0px rgba(99, 102, 241, 0.2)', // Indigo glow
             }
           }
         }
@@ -42,19 +55,21 @@
       /* Global Font Enforcement */
       body, input, textarea, select, button {
         font-family: 'Inter', sans-serif !important;
+        -webkit-font-smoothing: antialiased;
+        -moz-osx-font-smoothing: grayscale;
       }
 
       /* Custom scrollbar for Webkit */
       ::-webkit-scrollbar {
-        width: 8px;
-        height: 8px;
+        width: 6px;
+        height: 6px;
       }
       ::-webkit-scrollbar-track {
-        background: #f1f5f9; 
+        background: transparent; 
       }
       ::-webkit-scrollbar-thumb {
         background: #cbd5e1; 
-        border-radius: 4px;
+        border-radius: 10px;
       }
       ::-webkit-scrollbar-thumb:hover {
         background: #94a3b8; 
@@ -92,5 +107,7 @@
 </head>
   <body class="bg-slate-50 text-slate-800 antialiased h-screen overflow-hidden">
     <div id="root" class="h-full"></div>
+    <!-- Entry Point with Babel Compilation -->
+    <script type="text/babel" data-type="module" data-presets="react,typescript" src="./index.tsx"></script>
   </body>
 </html>
